# riju

./: .clang-format  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE.md  Makefile  README.md  SECURITY.md  env.yaml.bash  langs.json  next.config.js  package.json  tsconfig-webpack.json  tsconfig.json  webpack.config.cjs  webpack.config.js
.circleci/: config.yml
.github/: FUNDING.yml
agent/: go.mod  go.sum  logging.go  main.go  process.go  websocket.go
backend/: api.js  config.js  k8s.js  langs.js  lsp-repl.js  sandbox-k8s.js  sandbox.bash  sandbox.js  server.js  session-base.js  shutdown.js  test-runner.js  users.js  util.js
builder/: build.js
cli/: compile.bash  go.mod  go.sum
doc/: build.md  infra.md  infrastructure.md  local.md  selfhosting.md  tutorial.md  what-languages.md
docker/: Dockerfile.build
dynamic/: app.html
financials/: README.md  fin.py  pyproject.toml
financials/2021-07/: breakdown.txt
financials/2021-08/: breakdown.txt
financials/2021-09/: breakdown.txt
financials/2021-10/: breakdown.txt
financials/2021-11/: breakdown.txt
financials/2021-12/: breakdown.txt
financials/2022-01/: breakdown.txt
financials/2022-02/: breakdown.txt
financials/2022-03/: breakdown.txt
financials/2022-04/: breakdown.txt
frontend/: README.md  theme.js
grafana/: alertmanager.yaml  alerts.yaml  dashboard.json
k8s/: cluster.yaml  ingresses.in.yaml  metallb-config.in.yaml  metallb-crds.yaml  metallb-rbac.yaml  namespaces.yaml  provisioning.md  riju-docker-registry.yaml  riju-minio-rbac.yaml  (+10 more)
(+472 files in other folders)
