[tool.poetry]
name = "riju-financials"
version = "0.1.0"
description = "Financial data for Riju hosting"
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.23"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
